welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:2: error: ')' expected but 'return' found.
	if (you<=2  || (date<=2) return 0
                                 ^